--- a/web/templates/compra.html
+++ b/web/templates/compra.html
@@ -8,31 +8,29 @@
 <div class="page-styling">
     <div class="woocommerce prod-litems section-list">
             <h2>Fecha : {{pedido.fecha_registro}}</h2>
-            
-            {% for detalle in pedido.pedidodetalle_set.all %}
+            {%for detalle in pedido.pedidodetalle_set.all %}
             <article class="prod-li sectls">
                 <div class="prod-li-inner">
                     <a href="#" class="prod-li-img">
-                        <img src="{{detalle.producto.imagen.url}}" alt="">
+                        <img src="{{detalle.Producto.imagen.url}}" alt="">
                     </a>
                     <div class="prod-li-cont">
                         <div class="prod-li-ttl-wrap">
                             <p>
-                                <a href="producto.html">{{detalle.producto.categoria}}</a>
+                                <a href="#">{{ detalle.Producto.categoria }}</a>
                             </p>
-                            <h3><a href="product.html">{{detalle.producto.nombre}}</a></h3>
+                            <h3><a href="product.html">{{ detalle.Producto.nombre }}</a></h3>
                         </div>
                         <div class="prod-li-prices">
                             <div class="prod-li-price-wrap">
                                 <p>Precio</p>
-                                <p class="prod-li-price">${{detalle.producto.precio}}</p>
+                                <p class="prod-li-price">${{detalle.Producto.precio}}</p>
                             </div>
                         </div>
                         <div class="prod-li-qnt-wrap">
                             <p class="qnt-wrap prod-li-qnt">
-                                <a href="#" class="qnt-plus prod-li-plus"><i class="icon ion-arrow-up-b"></i></a>
-                                <input type="text" value="{{detalle.cantidad}}">
-                                <a href="#" class="qnt-minus prod-li-minus"><i class="icon ion-arrow-down-b"></i></a>
+                                <input type="text" value="{{detalle.cantidad}}" Piezas>
+
                             </p>
                         </div>
                         <div class="prod-li-total-wrap">
