--- a/web/templates/gracias.html
+++ b/web/templates/gracias.html
@@ -2,8 +2,10 @@
 {% block content %}
 <h1 class="maincont-ttl">Checkout OK</h1>
     <ul class="b-crumbs">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/">Inicio</a></li>
         <li>COMPRA</li>
     </ul>
-    <h2>GRACIAS POR TU COMPRA</h2>    
+    <h2>GRACIAS POR TU COMPRA</h2> 
+    <h3>Numero de Pedido: {{pedido.nro_pedido}}</h3>
+    <h3>Te mandaremos tu pedido lo antes posible</h3>   
 {% endblock %}
