--- a/web/templates/pedido.html
+++ b/web/templates/pedido.html
@@ -2,10 +2,10 @@
 {% block content %}
 <h1 class="maincont-ttl">REGISTRO DE PEDIDO</h1>
     <ul class="b-crumbs">
-        <li><a href="/">Inicio</a></li>
+        <li><a href="/">Home</a></li>
         <li>pedido</li>
     </ul>
-    <form method="post" action="#" class="register">
+    <form method="post" action="{% url 'web:confirmarPedido' %}" class="register">
     {% csrf_token %}
     <article class="page-cont">
         <div class="page-styling">
@@ -48,7 +48,7 @@
                         <div class="prod-li-cont">
                             <div class="prod-li-ttl-wrap">
                                 <p>
-                                    <a href="#">{{value.categoria}}</a>
+                                    <a href="#">value.categoria</a>
                                 </p>
                                 <h3><a href="product.html">{{ value.nombre }}</a></h3>
                             </div>
@@ -60,7 +60,9 @@
                             </div>
                             <div class="prod-li-qnt-wrap">
                                 <p class="qnt-wrap prod-li-qnt">
-                                    <p>Piezas {{value.cantidad}}</p>
+                                    <a href="#" class="qnt-plus prod-li-plus"><i class="icon ion-arrow-up-b"></i></a>
+                                    <input type="text" value="{{value.cantidad}}">
+                                    <a href="#" class="qnt-minus prod-li-minus"><i class="icon ion-arrow-down-b"></i></a>
                                 </p>
                             </div>
                             <div class="prod-li-total-wrap">
